qiaof: fix index009 span text-align

--- a/mobile/css/theme/theme009.less
+++ b/mobile/css/theme/theme009.less
@@ -82,6 +82,10 @@
 	font-size: @s-size;
 	display: inline-block;
 	margin-top: -5px;
+  width: 100%;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .theme9_ul a .test .one{
